--- a/Components/Sources/Components/Components/Editors/Common Views/Input Accessory Views/Expanding/WKEditorToolbarExpandingView.xib
+++ b/Components/Sources/Components/Components/Editors/Common Views/Input Accessory Views/Expanding/WKEditorToolbarExpandingView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_9" orientation="landscape" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -281,11 +281,11 @@
                 <outlet property="findInPageButton" destination="ysd-bl-nOt" id="YnS-6B-WJp"/>
                 <outlet property="formatHeadingButton" destination="7QK-zM-3Zu" id="OVa-3o-cP2"/>
                 <outlet property="formatTextButton" destination="q5y-cw-4pq" id="EVV-8g-wME"/>
+                <outlet property="imageButton" destination="Oyz-BA-g0g" id="Gxu-b5-3Sp"/>
                 <outlet property="increaseIndentionButton" destination="YcQ-k6-ZuB" id="phQ-vm-eKH"/>
                 <outlet property="linkButton" destination="lOp-Bv-UED" id="I7F-zV-jom"/>
-                <outlet property="mediaButton" destination="Oyz-BA-g0g" id="Gxu-b5-3Sp"/>
-                <outlet property="primaryContainerView" destination="BWO-2h-I64" id="8BW-Xe-ftH"/>
                 <outlet property="orderedListButton" destination="Usg-R3-2O9" id="8Qf-xg-gjD"/>
+                <outlet property="primaryContainerView" destination="BWO-2h-I64" id="8BW-Xe-ftH"/>
                 <outlet property="scrollView" destination="ZnR-ux-s6T" id="cvF-Ya-s9R"/>
                 <outlet property="secondaryContainerView" destination="51i-1d-Lli" id="RSM-Cp-gEO"/>
                 <outlet property="stackView" destination="ajR-7a-Sik" id="xc8-7a-mMJ"/>
